# tak_ai

./: LICENSE  README.md
mcts/: CMakeLists.txt  main.cpp  tui.cpp
mcts/src/: ai_model.cpp  ai_model.hpp  game.cpp  game.hpp  mcts_bot.cpp  mcts_bot.hpp
model/: dataset.py  model.py  train.py
